# production-grade-rag

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  DOCKER_INFRASTRUCTURE.md  Dockerfile  GLOSSARY.md  README.md  SECURITY.md  SKILLS.md  TROUBLESHOOTING.md  alll-checks.ps1  docker-compose.yml  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  feature_request.md
.github/ISSUE_TEMPLATE/: bug_report.md
data-volume/minio_data/.minio.sys/: format.json
data-volume/postgres_data/: postmaster.pid
data-volume/postgres_data/base/1/: 2619  2619_vm  2696  2840  2841  pg_internal.init
data-volume/postgres_data/base/16384/: 1247  1249  1255  1255_fsm  1255_vm  1259  1259_fsm  13462  16488  (+84 more)
data-volume/postgres_data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
data-volume/qdrant_data/: raft_state.json
data-volume/redis_data/appendonlydir/: appendonly.aof.1.base.rdb  appendonly.aof.1.incr.aof
docker/init/: 01_schema.sql
docs/: API.md  DOCKER_INFRASTRUCTURE.md  ERD.md  EVALUATION.md  MONITORING.md  ONBOARDING.md  PRODUCTION_RAG_QDRANT_HYBRID.md  PRODUCTION_RAG_SYSTEM.md  RAG_IMPLEMENTATION_GUIDE.md  RAG_IMPLEMENTATION_GUIDE_v1.md  RAG_Implementation_Roadmap.xlsx  RAG_Implementation_Roadmap_v3.xlsx  RAG_THEORY_COMPLETE-v1.md  RAG_THEORY_COMPLETE.md
docs/tmp/: RAG_IMPLEMENTATION_GUIDE.md  RAG_Implementation_Roadmap_v2.xlsx
mds/: DATA_GOVERNANCE.md  DEPLOYMENT.md  MODELS.md  ONBOARDING.md  README.md  SECURITY.md
resources/input/: sample_engineering_blog.html  sample_hr_data.xlsx  sample_onboarding_guide.docx
src/ingestion/parsers/: README.md
src/validation/: README.md
tests/: test_import.py  test_infrastructure.py
(+5 files in other folders)
